# zm

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README.md  cabal.project  haskell-ci.yml  stack.yaml  stack710.yaml  stack801.yaml  stack802.yaml  stack821.yaml  stack822.yaml  stackDev.yaml  typed.cabal  zm.cabal
.github/workflows/: haskell-ci.yml
doc/: Data-Digest-Keccak.html  Data-List-Extra.html  Data-These-Extra.html  ZM-Abs.html  ZM-AsValue.html  ZM-BLOB-BLOBList.html  ZM-BLOB.html  ZM-Model.html  ZM-Parser-ADT.html  ZM-Parser-Doc.html  ZM-Parser-Env.html  ZM-Parser-Lexer.html  ZM-Parser-Types.html  ZM-Parser-Util.html  ZM-Parser-Value.html  ZM-Parser.html  ZM-Pretty-Base.html  ZM-Pretty.html  ZM-To-Decoder.html  ZM-To-Encoder.html  ZM-Transform.html  ZM-Type-Array.html  ZM-Type-BLOB.html  ZM-Type-Bit.html  ZM-Type-Bits11.html  ZM-Type-Bits23.html  ZM-Type-Bits52.html  ZM-Type-Bits8.html  ZM-Type-Char.html  ZM-Type-Float32.html  ZM-Type-Float64.html  ZM-Type-Function.html  ZM-Type-Generate.html  ZM-Type-List.html  ZM-Type-Map.html  ZM-Type-NonEmptyList.html  ZM-Type-Prims.html  ZM-Type-Repo.html  ZM-Type-Repo0.html  ZM-Type-String.html  (+36 more)
doc/src/: Data.Digest.Keccak.html  Data.List.Extra.html  Data.These.Extra.html  ZM.Abs.html  ZM.AsValue.html  ZM.BLOB.BLOBList.html  ZM.BLOB.html  ZM.Model.html  ZM.Parser.ADT.html  ZM.Parser.Doc.html  ZM.Parser.Env.html  ZM.Parser.Lexer.html  ZM.Parser.Types.html  ZM.Parser.Util.html  ZM.Parser.Value.html  ZM.Parser.html  ZM.Pretty.Base.html  ZM.Pretty.html  ZM.To.Decoder.html  ZM.To.Encoder.html  ZM.Transform.html  ZM.Type.Array.html  ZM.Type.BLOB.html  ZM.Type.Bit.html  ZM.Type.Bits11.html  ZM.Type.Bits23.html  ZM.Type.Bits52.html  ZM.Type.Bits8.html  ZM.Type.Char.html  ZM.Type.Float32.html  ZM.Type.Float64.html  ZM.Type.Function.html  ZM.Type.Generate.html  ZM.Type.List.html  ZM.Type.Map.html  ZM.Type.NonEmptyList.html  ZM.Type.Prims.html  ZM.Type.Repo.html  ZM.Type.Repo0.html  ZM.Type.String.html  (+6 more)
jsbits/: test.js
src/: Generate.hs  QQ.hs  README.hs  README.lhs  ZM.hs
src/Data/: Annotate.hs  BLOB.hs  Pattern.hs  These.hs  Timeless.hs  Typed.hs
src/Data/Digest/: Keccak.hs  SHA3.hs  Shake128.hs
src/Data/List/: Extra.hs
src/Data/Pattern/: Test.hs  ToHaskell.hs  ToHaskellTest.hs  Types.hs
src/Data/These/: Extra.hs
src/Data/Timeless/: Mutual.hs
src/Data/Typed/: Abs.hs  BLOB.hs  Class.hs  Defs.hs  Defs2.hs  Dynamic.hs  Generate.hs  Instances.hs  Model.hs  Pretty.hs  PrimTypes.hs  Timeless.hs  Transform.hs  Types.hs  Util.hs  Value.hs
src/Data/Typed/Pretty/: Value.hs
src/Data/Typed/Type/: Array.hs  BLOB.hs  Bit.hs  Bits11.hs  Bits23.hs  Bits52.hs  Bits8.hs  Char.hs  Float32.hs  Float64.hs  Generate.hs  List.hs  Map.hs  NonEmptyList.hs  Tuples.hs  Unit.hs  Words.hs
src/QQ/: BlockList.hs  Word7.hs  Word8.hs
src/Quid2/QQ/: DataType.hs  Pattern.hs
src/ZM/: Abs.hs  AsValue.hs  BLOB.hs  Coerce.hs  Dynamic.hs  Model.hs  Parser.hs  Pretty.hs  Transform.hs  Types.hs  Util.hs
src/ZM/BLOB/: BLOBList.hs
src/ZM/Parser/: ADT.hs  Bracket.hs  Doc.hs  Env.hs  Exp.hs  Lexer.hs  Literal.hs  Op.hs  Pretty.hs  Types.hs  Util.hs  Val.hs  Value.hs
src/ZM/Pretty/: Base.hs  Value.hs
src/ZM/To/: Decoder.hs  Encoder.hs
src/ZM/Type/: Array.hs  BLOB.hs  Bit.hs  Bits11.hs  Bits23.hs  Bits52.hs  Bits8.hs  Char.hs  Float32.hs  Float64.hs  Function.hs  Generate.hs  List.hs  Map.hs  NonEmptyList.hs  Prims.hs  Repo.hs  Repo0.hs  String.hs  Tuples.hs  Unit.hs  Words.hs
test/: DocSpec.hs  DocTests.hs  Driver.hs  Info.hs  InfoSHA.hs  Spec.hs
test/DocTest/: Test.hs
test/DocTest/ZM/: AsValue.hs
test/DocTest/ZM/To/: Decoder.hs
test/Test/: Data.hs  Data3.hs
test/Test/Data/: Flat.hs  Model.hs  Values.hs
test/Test/Data2/: Flat.hs
test/Test/Data3/: Flat.hs
test/Test/ZM/ADT/: All.hs
test/Test/ZM/ADT/ADT/: K3e8257255cbf.hs
test/Test/ZM/ADT/ADTRef/: K07b1b045ac3c.hs
test/Test/ZM/ADT/AbsRef/: K4bbd38587b9e.hs
test/Test/ZM/ADT/Array/: K2e8b4519aeaa.hs
test/Test/ZM/ADT/BLOB/: Kf139d4751fda.hs
test/Test/ZM/ADT/Bit/: K65149ce3b366.hs
test/Test/ZM/ADT/Bits11/: K8ae75e67a616.hs
test/Test/ZM/ADT/Bits23/: K338888222364.hs
test/Test/ZM/ADT/Bits52/: Kf727da8aa8ad.hs
test/Test/ZM/ADT/Bits8/: K9e3b8c835fe9.hs
test/Test/ZM/ADT/Bool/: K306f1981b41c.hs
test/Test/ZM/ADT/ByAny/: Ka4d0bf8f6fb5.hs
test/Test/ZM/ADT/ByPattern/: Kcf6c76b3f808.hs
test/Test/ZM/ADT/ByType/: K87f090a54ea3.hs
test/Test/ZM/ADT/Bytes/: Kf8844385a443.hs
test/Test/ZM/ADT/Celsius/: Ka5782c1002a5.hs
test/Test/ZM/ADT/ChannelSelectionResult/: Kc6627a317dbc.hs
test/Test/ZM/ADT/Char/: K066db52af145.hs
test/Test/ZM/ADT/ConTree/: K86653e040025.hs
test/Test/ZM/ADT/Content/: K1ba230d92eb8.hs  K957357183935.hs
test/Test/ZM/ADT/Either/: K6260e465ae74.hs
test/Test/ZM/ADT/Filler/: Kae1dfeece189.hs
test/Test/ZM/ADT/FlatEncoding/: K982148c09ddb.hs
test/Test/ZM/ADT/HostAddress/: K64f93d94a73d.hs
test/Test/ZM/ADT/HostPort/: K0ab5ac6303b9.hs
test/Test/ZM/ADT/IEEE_754_binary32/: Kb53bec846608.hs
test/Test/ZM/ADT/IEEE_754_binary64/: Kcba9596b4657.hs
test/Test/ZM/ADT/III/: K4cf5dd973ae4.hs
test/Test/ZM/ADT/IP4Address/: K6cb2ee3ac409.hs
test/Test/ZM/ADT/Identifier/: Kdc26e9d90047.hs
test/Test/ZM/ADT/Int/: K102a3bb904e3.hs
test/Test/ZM/ADT/Int16/: K3dac6bd4fa9c.hs
test/Test/ZM/ADT/Int64/: Kfb94cb4d4ede.hs
test/Test/ZM/ADT/Int8/: Kb3a2642b4a84.hs
test/Test/ZM/ADT/LeastSignificantFirst/: K20ffacc8f8c9.hs
test/Test/ZM/ADT/List/: Kb8cd13187198.hs
test/Test/ZM/ADT/Match/: Kc23b20389114.hs
test/Test/ZM/ADT/Maybe/: Kda6836778fd4.hs
test/Test/ZM/ADT/Message/: K551d9f2adb72.hs
test/Test/ZM/ADT/MostSignificantFirst/: K74e2b3b89941.hs
test/Test/ZM/ADT/Msg/: Kfb89a57cdc09.hs
test/Test/ZM/ADT/NonEmptyList/: Kbf2d1c86eb20.hs
test/Test/ZM/ADT/PreAligned/: Kb2f28cf37d12.hs
test/Test/ZM/ADT/RepoProtocol/: K05c7d893e9d5.hs
test/Test/ZM/ADT/SHA3_256_6/: K2008e8e3f4a4.hs
test/Test/ZM/ADT/SHAKE128_48/: K9f214799149b.hs
test/Test/ZM/ADT/SensorReading/: Ke45682c11f7b.hs
test/Test/ZM/ADT/Sign/: K549f91f3b0ec.hs
test/ZM/: Prim.hs
(+21 files in other folders)
