name: zm
version: 0.3.2
synopsis: Language independent, reproducible, absolute types
description:
    See the <http://github.com/tittoassini/zm online tutorial>.
homepage: http://github.com/tittoassini/zm
category: Data,Reflection
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2016 Pasqualino `Titto` Assini
cabal-version: >=1.10
build-type: Simple
Tested-With: GHC == 7.10.3 GHC == 8.0.2 GHC == 8.2.2
extra-source-files:
    stack.yaml
    stack710.yaml
    stack802.yaml
    stack822.yaml
    README.md

source-repository head
    type: git
    location: https://github.com/tittoassini/zm

library
    exposed-modules:
        Data.Digest.Keccak
        ZM
        ZM.Abs
        ZM.BLOB
        ZM.Type.Array
        ZM.Type.BLOB
        ZM.Type.Bit
        ZM.Type.Bits8
        ZM.Type.Bits11
        ZM.Type.Bits23
        ZM.Type.Bits52
        ZM.Type.Char
        ZM.Type.Float32
        ZM.Type.Float64
        ZM.Type.List
        ZM.Type.NonEmptyList
        ZM.Type.Map
        ZM.Type.Tuples
        ZM.Type.Unit
        ZM.Type.Words
        ZM.Dynamic
        ZM.Type.Generate
        ZM.Pretty
        ZM.Pretty.Base
        ZM.Pretty.Value
        ZM.Model
        ZM.Transform
        ZM.Types
        ZM.Util
    
    if impl(ghcjs -any)
        build-depends:
            ghcjs-base >=0.2 && <0.3
    else
        build-depends: cryptonite >=0.22 && <1,memory

    build-depends:
                  base >=4.8 && <5,
                  bytestring>=0.10.6.0 && < 0.11,
                  containers == 0.5.*,
                  deepseq == 1.4.*,
                  pretty >= 1.1.2 && < 1.2,
                  transformers >= 0.4.2.0 && < 0.6,
                  convertible == 1.1.*,
                  text,
                  flat == 0.3.*,
                  model >= 0.4.4 && < 0.5,
                  either > 4.3.2 && <6
    js-sources:
        jsbits/sha3.js
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -O2 -funbox-strict-fields -Wall -fno-warn-orphans -fno-warn-name-shadowing

test-suite zm-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
                  base,
                  containers,
                  bytestring,
                  text,
                  pretty,
                  tasty >= 0.11 && < 0.13,
                  tasty-hunit >= 0.8 && < 0.11,
                  tasty-quickcheck >=0.8.1 && < 0.9.2,
                  timeit>=1 && <1.1,
                  flat,
                  model,
                  zm
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Info
        Test.Data
        Test.Data.Flat
        Test.Data.Model
        Test.Data2
        Test.Data2.Flat
        Test.Data3
        Test.Data3.Flat
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite zm-doctest
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocSpec.hs
  build-depends:      base, doctest>=0.11.1 && <0.14,filemanip>=0.3.6.3 && < 0.3.7,zm
  HS-Source-Dirs:     test
